# nuvex-invest

./: .gitattributes  .gitignore  CLAUDE.md  README.md  start.bat
backend/: main.py  pyproject.toml  requirements.txt
backend/api/: dependencies.py
backend/api/routers/: acoes.py  onboarding.py  ranking.py
backend/api/schemas/: acao_schema.py  perfil_schema.py  ranking_schema.py
backend/domain/entities/: acao.py  preco_justo.py  score.py
backend/domain/ports/: acoes_repo.py  analise_port.py  coleta_port.py
backend/domain/services/: analise_service.py  onboarding_service.py  ranking_service.py
backend/infra/db/: models.py  sqlite_repo.py
backend/infra/ollama/: adapter.py
backend/infra/yfinance/: adapter.py  sync.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx  RankingTable.tsx  ScoreBar.tsx  StockCard.tsx  Tooltip.tsx
frontend/src/hooks/: useRanking.ts  useStock.ts
frontend/src/pages/: Compare.tsx  Onboarding.tsx  Ranking.tsx  StockDetail.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
frontend/src/utils/: format.ts
